@@ -134,7 +134,7 @@ KEYDOWN events when the user holds a key. You can control the
 repeat timing with the delay and interval values. If no arguments
 are passed, keyboard repeat will be disabled.
 <br>&nbsp;<br>
-The default values for delay and interval are 500 and 30.
+Good values for delay and interval are 500 and 30.
 <br>&nbsp;<br>
 Delay is the amount of milliseconds before the first repeated
 KEYDOWN event is received. The interval is the amount of
